# Marketing-SM

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  pyproject.toml
marketing_sm/: __init__.py
marketing_sm/business/: ai.py  model.py
marketing_sm/data/: constants.py  prompts.py  scraper.py
marketing_sm/infrastructure/: settings.py
marketing_sm/infrastructure/manifests/: app-template.yaml
marketing_sm/presentation/: app.py  interface.py  language.py
